--- a/index.html
+++ b/index.html
@@ -1645,7 +1645,7 @@ h1 {
   </head>
   <body> 
     <audio autoplay>
-      <source src="musica.mp3" type="audio/mpeg">
+      <source src="musica.mp3" type="audio/mpp3">
       Your browser does not support the audio element.
   </audio>
   </body>
