--- a/index.html
+++ b/index.html
@@ -1645,8 +1645,9 @@ h1 {
   </head>
 
   <body class="container">
-    <h1 class="titulo">
-      No importa cuanta distacia haya entre nosotros eso no me impedira regalarte tus flores amarillas❤️</h1>
+    <h3 class="titulo">
+      No importa cuanta distacia haya entre nosotros eso no me impedira regalarte tus flores amarillas
+      Pa ti mi Solyshito❤️</h1>
   <audio autoplay>
       <source src="musica.mp3" type="audio/mpp3">
       Your browser does not support the audio element.
