--- a/index.html
+++ b/index.html
@@ -1643,15 +1643,17 @@ h1 {
 
     </style>
   </head>
-
+<body> 
+  <audio autoplay>
+      <source src="musica.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
+  </audio>
+  </body>
   <body class="container">
     <h3 class="titulo">
       No importa cuanta distacia haya entre nosotros eso no me impedira regalarte tus flores amarillas
       Pa ti mi Solyshito❤️</h1>
-  <audio autoplay>
-      <source src="musica.mp3" type="audio/mpp3">
-      Your browser does not support the audio element.
-  </audio>
+  
     <div class="night"></div>
     <div class="flowers">
       <div class="flower flower--1">
@@ -1963,4 +1965,5 @@ h1 {
       </div>
     </div>
   </body>
+  
 </html>
