--- a/index.html
+++ b/index.html
@@ -1645,14 +1645,14 @@ h1 {
   </head>
 <body> 
   <audio autoplay>
-      <source src="musica.mp3" type="audio/mp3">
-      Your browser does not support the audio element.
-  </audio>
+        <source src="musica.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
   </body>
   <body class="container">
-    <h3 class="titulo">
+    <h4 class="titulo">
       No importa cuanta distacia haya entre nosotros eso no me impedira regalarte tus flores amarillas
-      Pa ti mi Solyshito❤️</h1>
+      Pa ti mi Solyshito de mi alma ❤️</h1>
   
     <div class="night"></div>
     <div class="flowers">
